<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentsWork</string>
    <string name="action_settings">Settings</string>
    <string name="logo_placeholder">LOGO</string>
    <string name="logo_hint">Touch to start an animation</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="greeting_text">
        Hello! This application will help you
        resolve some strange problems in your life
    </string>
    <string name="greeting_login">Have an account? Login!</string>
    <string name="greeting_signup">New here? Sign Up!</string>

    <string name="login_email_hint">your email</string>
    <string name="login_password_hint">your password</string>
    <string name="login_button">Log in</string>

    <string name="signup_name_hint">your name</string>
    <string name="signup_email_hint">your real email</string>
    <string name="signup_password_hint">desirable password</string>
    <string name="signup_button">Sign up</string>

    <string name="nothing_to_do">nothing to do here…</string>


    <string name="item1">Add</string>
    <string name="item2">Edit</string>
    <string name="item3">Delete</string>

    <string-array
        name="drawer_items">
        <item>List</item>
        <item>Animation (fade in)</item>
        <item>Animation (rotate)</item>
        <item>Animation (bounce)</item>
        <item>Animation (slide down)</item>

    </string-array>

    <string name="placeholder_list">The list should be here</string>
    <string name="placeholder_animations">Animations would be there</string>

    <string-array name="list_titles">
        <item>Lorem ipsum</item>
        <item>At vero</item>
        <item>Duis autem</item>
        <item>Sanctus sea</item>
    </string-array>
</resources>
